	(escape, uescape, qescape)  Return the empty string in response 
	to undefined input.

	* lib/Mj/Resend.pm:  (_r_strip_body, _clean_text)  Support the
	"clean" attachment filter, which removes potentially dangerous
	content from text/html body parts.

	* lib/Mj/Util.pm:  (clean_html)  Given a file containing
	HTML and lists of unwanted attributes and elements, remove
	them from the file.

2002-06-10  Michael Yount <csf@moscow.com>

	* lib/Mj/Filespace.pm:  (index)  Return data in a hashref
	instead of a list.

	* lib/Mj/Format.pm:  (configset)  Bugfix:  Display warnings,
	if present, if the command succeeds.

2002-06-10  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (_list_file_get): New calling convention.
	Adapt all _list_file_get callers to new calling convention.

	* lib/Mj/Token.pm:
	* lib/Mj/Resend.pm:
	* lib/Mj/MailOut.pm:
	* lib/Mj/Inform.pm:
	* lib/Mj/Config.pm:
	* lib/Mj/BounceHandler.pm:
	* lib/Mj/Access.pm: New _list_file_get calling convention.

2002-06-10  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  The configdef, configset, and sessioninfo
	commands have format file support.
	Bugfix:  Do not require a valid owner for the createlist
	command unless a list is created.  Thanks to Duncan Hill.

	* lib/Majordomo.pm:  (sessioninfo_start, s_recognize)
	Distinguish invalid session IDs from missing session files.

	* lib/Mj/Format.pm:  Escape CMDPASS data.
	(announce, configdef, configset, sessioninfo)  Add format
	file support.

2002-06-08  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Add format file and supplementary display
	support for the which command.

	* lib/Majordomo.pm:  (_set) Return the stripped address in
	the "stripaddr" variable and the full address in the 
	"victim" variable.
	(_which)  Add a back end for the which core routine to
	allow the command to stall.

	* lib/Mj/CommandProps.pm:  Remove support for the which-regex
	and which-pattern commands.

	* lib/Mj/Format.pm:  (accept, reject) Place the requester's 