@@ -3202,16 +3202,20 @@ it provides all of the i18n functionality for file access.
 This handles figuring out the list''s default language, properly expanding
 the search list and handling the share_list.
 
-If $subs is defined, it should be a hashref of substitutions to be made;
-substitute_vars will be called automatically.
+If $args{subs} is defined, it should be a hashref of substitutions to
+be made; substitute_vars will be called automatically.
 
-If $nofail is defined, this function will never fail to return a file, even
-if the file is not found.  Instead, it will emit a warning and return a
-generic "file not found" file.
+If $args{nofail} is true, this function will never fail to return a
+file, even if the file is not found.  Instead, it will emit a warning
+and return a generic "file not found" file.
 
-If $lang is defined, it is used in place of any default_language setting.
+If $args{lang} is defined, it is used in place of any default_language
+setting.
 
-Note that if $subs is provided, the returned filename will be a temporary
+If $args{nodefsearch} is true, the DEFAULT and STOCK files will not be
+used as sources for files.
+
+Note that if $args{subs} is provided, the returned filename will be a temporary
 generated by substitute_vars.  The caller is responsible for cleaning up
 this temporary.
 
@@ -3222,8 +3226,8 @@ sub _list_file_get {
   my %args = @_;
 
   my $log  = new Log::In 130, "$args{list}, $args{file}";
-  my (%paths, @langs, @out, @paths, @search, @share, $ok, $d, $f, $i, $j,
-      $l, $p, $tmp);
+  my (%paths, @dsearch, @langs, @out, @paths, @search, @share, $ok,
+      $d, $f, $i, $j, $l, $p, $tmp);
 
   my $list = $args{list};
   my $file = $args{file};
@@ -3231,14 +3235,16 @@ sub _list_file_get {
 
   $list = 'GLOBAL' if ($list eq 'ALL');
   return unless $self->_make_list($list);
-  @search = $self->_list_config_get($list, 'file_search');
+  @search  = $self->_list_config_get($list, 'file_search');
+  @dsearch = ();
+  @dsearch = ('DEFAULT:$LANG', 'DEFAULT:', 'STOCK:$LANG', 'STOCK:en')
+    unless $args{nodefsearch};
 
   $lang ||= $self->_list_config_get($list, 'default_language');
   @langs = split(/\s*,\s*/, $lang) if $lang;
 
   # Build @paths list; maintain %paths hash to determine uniqueness.
-  for $i (@search, 'DEFAULT:$LANG', 'DEFAULT:',
-	  'STOCK:$LANG', 'STOCK:en')
+  for $i (@search, @dsearch)
     {
       # Split and supply defaults
       ($l, $d) = split(':', $i);
